src/tests/fixtures/field_definitions/ReferenceUndefinedType.ts
/** @GQLType */
class Query {
  /** @GQLField */
  somePropertyField: SomeUndefienedType;
}
